Update project-env-settings.sh
Working example